# openagent

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/agent/: anti_hallucination.py  code_retrieval.py  computer_use.py  context.py  context_manager.py  evaluation.py  model_router.py  multi_agent.py  planner.py  react_engine.py  self_healing.py  task_planner.py  terminal_stream.py  tool_guard.py  validators.py
backend/app/api/: agents.py  analytics.py  apikeys.py  audit.py  auth.py  automations.py  batch.py  billing.py  blueprints.py  cicd.py  codemaps.py  codex_security.py  computer_use.py  deepwiki.py  devbox.py  discovery.py  evaluation.py  events.py  git.py  knowledge.py  mcp_market.py  memory.py  notifications.py  onboarding.py  orgs.py  playbooks.py  pr_review.py  repos.py  schedules.py  (+8 more)
backend/tests/: conftest.py  test_agent_intelligence.py  test_api.py  test_core.py  test_services.py
cli/: openagent_cli.py  setup.py
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/wiki/: README.md  agent-intelligence.md  api-reference.md  architecture.md  getting-started.md  security.md
frontend/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts
frontend/src/: i18n.ts
(+122 files in other folders)
